--- a/client/app/build.gradle
+++ b/client/app/build.gradle
@@ -33,8 +33,7 @@ android {
     productFlavors {
         dev {
             dimension "api"
-            buildConfigField("String", "BASE_URL", '"https://dev.truckfix.bstorm.app"')
-            buildConfigField("String", "client_secret", '"QYNF9HeU2IQ1kTOrAfW9r6SXAWKaiKcGfPENAt2D"')
+            buildConfigField("String", "BASE_URL", '"http://doctor.lotusflare.com/api"')
             resValue "bool", "clear_text_traffic", "true"
         }
     }
@@ -62,6 +61,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0-alpha05"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
     kapt "androidx.lifecycle:lifecycle-compiler:$lifecycleVersion"
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation "com.google.code.gson:gson:$gsonVersion"
